syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
  // GetRace will return a single race requested by id.
  rpc GetRace(GetRaceRequest) returns (GetRaceResponse) {}
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  repeated bool race_visibility = 2;
  SortOrder sort_order = 3;
}

message GetRaceRequest {
  int64 race_id = 1;
}

message GetRaceResponse {
  repeated Race race = 1;
}

/* 
Additional sort order user/operator can specify.

low_to_high: indicate integer sorting from lowest to highest number.
alphabetical: indicate alphabetical sorting from a-z.
earliest_to_latest: indicate earliest time to latest time for advertised start time sorting.
ordered_item: type of key value from the races (e.g. id|meetingid|name|number|start time) to sort.
*/
message SortOrder {
  optional bool low_to_high = 1;
  optional bool alphabetical = 2;
  optional bool earliest_to_latest = 3;
  optional string ordered_item = 4;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // Race Status is 'CLOSED'|'OPEN' dependent on advertised_start_time. 
  string status = 7;
}

